--- a/src/css/stats.less
+++ b/src/css/stats.less
@@ -22,6 +22,10 @@
     text-align: left;
   }
 
+  .numeral {
+    font-weight: bold;
+  }
+
   .row {
     display: block;
     clear: both;
@@ -42,7 +46,7 @@
   .half, section {
     float: left;
     width: 50%;
-    padding: 8px;
+    padding: 0 8px;
 
     &:first-child {
       // border-right: 1px solid @border;
@@ -50,14 +54,15 @@
   }
 
   .name {
-    font-weight: bold;
+    font-size: 24px;
+    font-family: @hed;
   }
 
   label {
-    color: darken(@seaGreen, 20%);
-    padding-top: 8px;
+    font-family: @hed;
+    margin-top: 8px;
+    padding: 4px;
     text-transform: uppercase;
-    text-shadow: 2px 2px 2px rgba(0,0,0,.2);
   }
 
 }
