--- a/src/css/stats.less
+++ b/src/css/stats.less
@@ -1,6 +1,7 @@
 .overlay {
   background: @light-gray;
-  padding: 10px;
+  padding: 10px 10px 40px;
+  margin-bottom: 20px;
 }
 
 .stats {
@@ -8,7 +9,7 @@
 
   h2 {
     text-align: left;
-    font-family: @hed;
+    //font-family: @hed;
     font-size: 20px;
   }
 
@@ -56,11 +57,13 @@
   .name {
     font-size: 24px;
     font-family: @hed;
+    text-transform: uppercase;
   }
 
   label {
-    font-family: @hed;
-    margin-top: 8px;
+    //font-family: @hed;
+    color: #666;
+    margin-top: 16px;
     padding: 4px;
     text-transform: uppercase;
   }
