--- a/src/css/page.less
+++ b/src/css/page.less
@@ -1,6 +1,6 @@
 .intro {
   background: rgba(0, 0, 0, .4);
-  background: linear-gradient(to bottom, black, rgba(0, 0, 0, .1));
+  background: linear-gradient(to bottom, black, transparent);
   position: relative;
   z-index: 9;
   padding-bottom: 20px;
