Add read more links

--- a/src/css/page.less
+++ b/src/css/page.less
@@ -100,6 +100,13 @@
     }
   }
 
+  .read-more {
+    font-family: @hed;
+    font-size: 14px;
+    text-align: right;
+    display: block;
+  }
+
   .photo-credit {
     font-family: @body;
     font-size: 12px;
